--- a/index.html
+++ b/index.html
@@ -158,6 +158,9 @@
             <li>Sponge Cake - ₹400/kg</li>
             <li>Milk Cake - ₹600/kg</li>
         </ul>
+        <h2>Chocolates</h2>
+        <p>Dryfruit Chocolates - 1kg(800/-),1/2kg(400)</p>
+        <p>Dryfruit Milk Chocolates - 1kg(900/-),1/2kg(450)</p>
         <h2>Cake Pops</h2>
         <p>₹25 per piece</p>
         <h2>Brownie's</h2>
